# disluapp

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: dislua-config.cmake
dislua/: buffer.hpp  const.hpp  dislua.hpp  dump_info.hpp  interface.hpp  trains.hpp
dislua/lj/: ljconst.hpp  ljparser.hpp
dislua/luac/: lconst.hpp  lparser.hpp
dislua/luajit/: const.hpp  parser.hpp
dislua/luajit2/: const.hpp  parser.hpp
include/dislua/: buffer.hpp  const.hpp  detail.hpp  dislua.hpp  dump_info.hpp
include/dislua/lj/: ljconst.hpp  ljparser.hpp
include/dislua/types/: instruction.hpp  kgc.hpp  proto.hpp  table.hpp  varname.hpp
tests/: CMakeLists.txt  buffer-test.cpp  main-test.cpp  types-test.cpp
tests/lj/: parse-test.cpp
